fix Sonar bugs